--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,53 +9,93 @@ PERSONAL REMINDERS
 
 */
 
+@media (min-width: 400px) {
+/*    #bio {
+        display: grid;
+
+        height: 100vh;
+
+        grid-template-columns: auto;
+        grid-template-rows: 1fr 1fr;
+        
+        grid-template-areas: 
+        'portrait'
+        'name';
+    }
+    
+    #portrait-shot {
+/*        display: block;*/
+/*  Uncomment      grid-area: portrait;*/
+/*  Uncomment      max-width: 30%;*/
+/*        max-height: 70vh;*/
+/*        object-fit: cover;*/
+/*  Uncomment      border-radius: 50%;*/
+/*
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-left: auto;
+        margin-right: auto;
+*/
+
+/*}
+    }
+
+    #personal_details {
+        grid-area: name;
+    }
+*/
+    
+}
+
+@media (min-width: 700px) {
+    #bio {
+        display: grid;
+
+        max-height: 100vh;
+
+        grid-template-columns: 1fr 1fr;
+
+        grid-template-areas: 
+        'portrait name'
+        'portrait name'
+        'portrait name';
+
+    }
+    
+    #portfolio-name {
+        
+    }
+    
+    #personal-details {
+/*        padding-top: 20vh;*/
+/*        vertical-align: middle;*/
+    }
+    
+    
+}
+
+.nav-bar {
+    grid-area: nav;
+}
 
 body {
-    padding-top: 55px;
-}
-
-footer {
+/*    padding-top: 55px;*/
     display: grid;
-    background-color: aquamarine;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif
 }
 
-#portfolio-picture {
-    grid-area: portrait;
-    background-color: aliceblue;
-}
+#bio {
+        display: grid;
 
-#page-content {
-    grid-area: content;
-}
+        max-height: 100vh;
 
-#portfolio-name {
-    padding-top: 10%;
-    grid-area: name;
-    text-align: center;
-}
+        grid-template-columns: 1fr 1fr;
 
-#portfolio-bio {
-    padding-top: 55px;
-}
+        grid-template-areas: 
+        'portrait name'
+        'portrait name'
+        'portrait name';
 
-#research {
-    padding-top: 55px;
-    background-color: aquamarine;
-}
-
-#coursework {
-    padding-top: 55px;
-    background-color: aquamarine;
-}
-
-#projects {
-    padding-top: 55px;
-    background-color: aquamarine;
-}
-
-.titles {
-    padding-top: 13%;
-    font-size: 16px;
 }
 
 .portfolio-container {
@@ -71,22 +111,144 @@ footer {
         'portrait content content'
         'portrait content content';
     */
+        
 }
 
 .grid-section {
-    background-color: aquamarine;
-    padding: 15px;
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    background-color:white;
+/*    padding: 30px;*/
+/*    border: 1px solid rgba(0, 0, 0, 0.8);*/
 }
 
+#picture-container {
+    grid-area: portrait;
+    background-color: white;
+    max-height: 100vh;
+    min-height: 100vh;
+    padding-top: 45px;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-.portrait-shot {
-    width: 50%;
-    height: 50%;
+}
+
+#portfolio-picture-area {
+    position:relative;
+    max-height: 100vh;
+/*
+    margin-top: 25%;
+    margin-bottom: 25%;
+    margin-left: auto;
+    margin-right: auto;
+*/
+    
+}
+
+#portfolio-picture {
+    
+/*    padding-top: 20vh;*/
+}
+
+#portrait-shot {
+    display: block;
+    max-width: 100%;
+    max-height: 85vh;
     object-fit: cover;
     border-radius: 50%;
     position: relative;
-    left: 25%;
+/*
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+*/
+/*    left: 12.5%;*/
+}
+
+#portfolio-name {
+    text-align: center;
+    grid-area: name;
+    max-height: 100vh;
+    min-height: 100vh;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#personal-details {
+/*
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin: auto;
+    min-height: 200px;
+    align-items: center;
+*/
+    /*margin-left: auto;
+    position: relative;
+    top: 45%;
+    left: 55%;*/
+    margin-top: 50%;
+    margin-bottom: 50%;
+} 
+
+#my-name {
+    
+}
+
+.titles {
+    padding-top: 13%;
+    font-size: 16px;
+}
+
+#biography {
+    text-align: center;
+    background-color: black;
+}
+
+#portfolio-bio {
+    padding-top: 55px;
+    grid-area: bio;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    min-height: 100vh;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+#bio-paragraph-container {
+   padding-top: 40px;
+}
+
+#bio-paragraph {
+   
+}
+
+#technologies {
+    padding-top: 55px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    min-height: 100vh;
+    text-align: center;
+}
+
+#coursework {
+    padding-top: 55px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    min-height: 100vh;
+    text-align: center;
+}
+
+#projects {
+    padding-top: 55px;
+    background-color: white;
+    min-height: 100vh;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    text-align: center;
 }
 
 .social {
@@ -97,36 +259,3 @@ footer {
     text-align: right;
     font-size: 1px;
 }
-
-/*
-
-FOR EXPERIMENTATION 
-
-#special-item {
-    grid-area: myArea;
-}
-
-.grid-container {
-    display: grid;
-    
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    grid-template-areas: 
-        'myArea myArea . . .'
-        'myArea myArea . . .';
-    background-color: #2196F3;
-}
-
-
-.grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
-}
-
-
-END OF EXPERIMENTATION
-
-*/
